deploy/manifest-10.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: contacts
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: contacts
  labels:
    app: contacts
spec:
  selector:
    matchLabels:
      app: contacts
  replicas: 3
  template:
    metadata:
      labels:
        app: contacts
    spec:
      containers:
      - name: api-server
        image: johnbelamaric/contacts-api
        imagePullPolicy: Always
        args: [ "-dsn", "api:mypassword@tcp(mysql.db:3306)/contacts?charset=utf8&parseTime=True" ]
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: contacts
  labels:
    app: contacts
spec:
  type: NodePort
  selector:
    app: contacts
  ports:
  - name: http
    port: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: contacts
spec:
  rules:
    - host: minikube.local
      http:
        paths:
          - path: /contacts
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
