deploy/manifest-12.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: contacts
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: contacts
  labels:
    app: contacts
spec:
  selector:
    matchLabels:
      app: contacts
  replicas: 3
  template:
    metadata:
      labels:
        app: contacts
    spec:
      containers:
      - name: api-server
        image: johnbelamaric/contacts-api
        imagePullPolicy: Always
        args:
        - -dsn
        - api:mypassword@tcp(mysql.db:3306)/contacts?charset=utf8&parseTime=True
        - -s
        - :443
        - -cert
        - /etc/certs/tls.crt
        - -key
        - /etc/certs/tls.key
        ports:
        - containerPort: 443
          name: https
          protocol: TCP
        volumeMounts: 
        - name: contacts-tls
          mountPath: /etc/certs
          readOnly: true
      volumes:
      - name: contacts-tls
        secret:
          secretName: contacts-tls
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: contacts
  labels:
    app: contacts
spec:
  type: NodePort
  selector:
    app: contacts
  ports:
  - name: https
    port: 443
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: contacts
  annotations:
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #nginx.ingress.kubernetes.io/auth-tls-secret: "contacts/ca"
    #nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
spec:
  tls:
  - hosts:
    - minikube.local
    secretName: minikube
  rules:
  - host: minikube.local
    http:
      paths:
        - path: /contacts
          pathType: Prefix
          backend:
            service:
              name: api
              port:
                number: 443
