deploy/manifest-oauth2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: authc
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
        - args:
            - --provider=github
            - --email-domain=*
            - --upstream=file:///dev/null
            - --http-address=0.0.0.0:4180
            #- --tls-cert-file=/etc/certs/tls.crt
            #- --tls-key-file=/etc/certs/tls.key
            #- --set-xauthrequest
          image: quay.io/oauth2-proxy/oauth2-proxy:latest
          imagePullPolicy: Always
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP
          volumeMounts:
            - name: oauth2-proxy-tls
              mountPath: /etc/certs
              readOnly: true
      volumes:
        - name: oauth2-proxy-tls
          secret:
            secretName: oauth2-proxy
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: authc
spec:
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: authc
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx-oauth
  tls:
    - hosts:
        - minikube.local
      secretName: minikube
  rules:
    - host: minikube.local
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
